--- a/README
+++ b/README
@@ -44,7 +44,7 @@ When reading in the CSV file, the tool will skip the first row if it contains so
 
 _____
 
-For any further questions, please contact Michael O'Meara at michael.omeara@gmail.com.
+For any further questions, please contact Michael O'Meara at michael.omeara at gmail.com.
 
 
 
